# onesharp

./: .buildinfo  Copy_of_primitive_recursion.ipynb  Copy_of_tileUnd.ipynb  LICENSE  README.md  _config.yml  _toc.yml  arithmetic.ipynb  coding.ipynb  conf.py  evaluator.ipynb  flowchart.tex  functions.ipynb  genindex.html  getting_started.ipynb  haltDef.ipynb  halting.ipynb  index.html  index.md  latex_macros.sty  move_copy_write.ipynb  objects.inv  onesharpdefs.py  prf-prf.html  primitive_recursion.ipynb  pyproject.toml  references.bib  requirements.txt  sanity.ipynb  search.html  searchindex.js  self_writing.html  self_writing.ipynb  similarity.ipynb  single_register_self.ipynb  startup.shtml  t_predicate.ipynb  terms.ipynb  tidy.ipynb  tileUnd.ipynb  (+4 more)
_sources/: index.md  self_writing.ipynb
cesets/: computablyEnumerable.html  computablyEnumerable.ipynb
introOneSharp/: basic_programs.ipynb  functions.html  functions.ipynb  getting_started.ipynb  haltDef.html  haltDef.ipynb  instructions.html  instructions.ipynb  interpreters.html  interpreters.ipynb  move_copy_write.html  move_copy_write.ipynb  tidy.html  tidy.ipynb
ipy_notebooks/: compare.ipynb  div.ipynb  pow_unary.ipynb  universal.ipynb  universal_alt.ipynb
issues/: coding.html  coding.ipynb  issues.html  issues.ipynb  pictures.aux  pictures.tex  problems.html  problems.ipynb  recursion.html  recursion.ipynb  reduction.html  reduction.ipynb
logic/: CT_via_matrices.html  CT_via_matrices.ipynb  church_turing.html  church_turing.ipynb
more_programs/: arithmetic.html  arithmetic.ipynb  flowchart.tex  sanity.html  (+6 more)
(+311 files in other folders)
